Update to java 11